--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 /.gradle/
 /bin/
-
+/build/
 # Created by https://www.gitignore.io/api/git,java,gradle,windows,eclipse
 # Edit at https://www.gitignore.io/?templates=git,java,gradle,windows,eclipse
 
